# xrpl-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  package.json  pyproject.toml  verify.sh
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml  release-binaries.yml  release.yml  smoke.yml
design/: claude-design-brief.md  dashboard-before.html
docs/: dex_notes.md
modules/: account_hygiene.md  amm_liquidity_101.md  clawback_101.md  dex_inventory_guardrails.md  dex_literacy.md  dex_market_making_101.md  dex_vs_amm_risk_literacy.md  did_101.md  dnft_evolving_item_101.md  escrow_101.md  escrow_finish_101.md  failure_literacy.md  game_economy_capstone.md  mpt_distribution_101.md  mpt_issuance_101.md  nft_marketplace_101.md  nft_minting_101.md  payment_channel_101.md  receipt_audit.md  receipt_literacy.md  reserves_101.md  token_freeze_101.md  trust_line_failures.md  trust_lines_101.md
presets/: strategy_compare.json  strategy_inv.json  strategy_mm101.json
scripts/: gen_docs.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
site/src/components/dashboard/: JsonViewer.astro  LevelBadge.astro  ModuleCard.astro  ProgressBar.astro  StatusCard.astro
site/src/content/docs/handbook/: artifacts.md  beginners.md  commands.md  facilitator-dashboard.md  facilitator-guide.md  getting-started.md  index.md  modules.md
site/src/data/: curriculum.json
site/src/layouts/: DashboardLayout.astro
site/src/lib/: api.ts  dashboard-ui.ts  module-ids.ts
site/src/pages/: 404.astro
site/src/pages/app/: 404.astro  artifacts.astro  doctor.astro  index.astro  verify.astro
site/src/pages/app/facilitator/: index.astro  runs.astro
site/src/pages/app/modules/: [id].astro  index.astro
site/src/pages/app/run/: [id].astro
site/src/styles/: dashboard-fonts.css  dashboard.css  starlight-custom.css
tests/: test_amm.py  test_amm_swap_chains.py  test_api_contract.py  test_atomic.py  test_audit.py  test_cli.py  test_curriculum.py  test_dex.py  test_did.py  test_docs_drift.py  test_doctor.py  test_doctor_pedagogy.py  test_envelope_pedagogy.py  test_errors.py  test_escrow.py  test_feedback.py  test_freeze.py  test_hygiene.py  test_linter.py  test_modules.py  test_mpt.py  test_mpt_distribution.py  test_network_safety.py  test_nft.py  test_numeric_law.py  test_payloads.py  test_payment_channel.py  test_product_smoke.py  test_registry.py  test_reporting.py  test_reserves.py  test_reswarm_stage_a.py  test_runner.py  test_runner_isolation.py  test_runner_ws.py  test_runtime_rate_limit.py  test_schema_drift.py  test_send_fund.py  test_server.py  test_state.py  (+15 more)
tests/fixtures/: bad_amm_no_label.md  bad_dry_run_no_amm.md  bad_missing_id.md  bad_payload.md  bad_unknown_action.md  good_minimal.md
xrpl_lab/: __init__.py  __main__.py  _atomic.py  audit.py  cli.py  curriculum.py  curriculum_manifest.py  doctor.py  errors.py  feedback.py  handlers.py  linter.py  modules.py  registry.py  reporting.py  runner.py  runtime.py  server.py  state.py  workshop.py
xrpl_lab/actions/: amm.py  dex.py  did.py  escrow.py  freeze.py  fund.py  mpt.py  nft.py  paychan.py  reserves.py  send.py  strategy.py  trust_line.py  verify.py  wallet.py
xrpl_lab/api/: routes.py  runner_ws.py  schemas.py
xrpl_lab/transport/: base.py  dry_run.py  xrpl_testnet.py
