[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrpl-lab"
version = "1.7.1"
description = "XRPL training workbook — learn by doing, prove by artifact"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" },
]
keywords = ["xrpl", "blockchain", "training", "cli", "education"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "xrpl-py>=4.0.0,<5.0.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    # Transitive security floors — pinned to patched releases so the shipped
    # dependency tree carries no known CVEs (pip-audit gate in ci.yml):
    "idna>=3.15",        # CVE-2026-45409 (pulled transitively via httpx)
    "starlette>=1.0.1",  # PYSEC-2026-161 (pulled transitively via fastapi)
]

[project.optional-dependencies]
# urllib3>=2.7.0 is a security floor (PYSEC-2026-141/142, fixed in 2.7.0). It
# enters the dev tree transitively via pip-audit -> requests; pinned here so the
# audited dependency tree cannot regress to the vulnerable 2.6.3.
dev = ["ruff", "pytest", "pytest-asyncio", "pip-audit", "urllib3>=2.7.0"]

[project.scripts]
xrpl-lab = "xrpl_lab.cli:main"

[project.urls]
Homepage = "https://mcp-tool-shop-org.github.io/xrpl-lab/"
Repository = "https://github.com/mcp-tool-shop-org/xrpl-lab"
Issues = "https://github.com/mcp-tool-shop-org/xrpl-lab/issues"

[tool.hatch.build.targets.wheel.force-include]
"modules" = "modules"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
